<resources>
    <string name="app_name">ProyectoBDA</string>
    <string name="txtIniciosesion">Inicio de Sesion</string>
    <string name="txtUsuario">Usuario:</string>
    <string name="txtContraseña">Contraseña:</string>
    <string name="txtRegistrarse">Registrarse</string>
    <string name="InsertarUsuario">Inserte su Usuario</string>
    <string name="InsertarContraseña">Inserte su Contraseña</string>
    <string name="RealizarVenta">Realizar Venta</string>
    <string name="agregarproducto">Agregar Producto</string>
    <string name="txtInventario">Inventario</string>
    <string name="txtCOdigo">Codigo:</string>
    <string name="txtUnidades">Unidades:</string>
    <string name="txtNo.Producto">No. Producto:</string>
    <string name="txtPrecioCosto">Precio Costo:</string>
    <string name="txtPrecioVenta">Precio Venta:</string>
    <string name="txtDescripcion">Descripcion:</string>
    <string name="txtCOdigoR">Inserte el Codigo</string>
    <string name="txtUnidadesR">Inserte las Unidades</string>
    <string name="txtNo.ProductoR">Inserte el No. Producto</string>
    <string name="txtPrecioCostoR">Inserte el Precio Costo</string>
    <string name="txtPrecioVentaR">Inserte el Precio Venta</string>
    <string name="txtDescripcionR">Inserte una Descripcion</string>


</resources>