<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtPrecioVenta"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtPrecioVentaR"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecioCosto" />

    <EditText
        android:id="@+id/txtPrecioCosto"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtPrecioCostoR"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/txtNoProducto" />

    <EditText
        android:id="@+id/txtNoProducto"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtNo.ProductoR"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/txtUnidades" />

    <Button
        android:id="@+id/btnRealizarVenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/RealizarVenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnInventario"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/ListAgregar"
        android:layout_width="393dp"
        android:layout_height="184dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRealizarVenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="89dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtCOdigo"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/txtCodigo"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="89dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtUnidades"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/txtUnidades"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="89dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtNo.Producto"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/txtNoProducto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="89dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtPrecioCosto"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/txtPrecioCosto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="89dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtPrecioVenta"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/txtPrecioVenta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnInventario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtInventario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRealizarVenta" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="89dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtDescripcion"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toStartOf="@+id/txtDescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtCOdigoR"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUnidades"
        android:layout_width="213dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtUnidadesR"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="213dp"
        android:layout_height="78dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtDescripcionR"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/txtPrecioVenta" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="18dp"
        android:text="@string/agregarproducto"
        app:layout_constraintBottom_toTopOf="@+id/ListAgregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="393dp" />

</androidx.constraintlayout.widget.ConstraintLayout>